--- a/plugins/stack/_plugin.scss
+++ b/plugins/stack/_plugin.scss
@@ -6,6 +6,8 @@
 .stack,
 .stack .toggle {
   @extend %stack;
+  margin-top: 0;
+  margin-bottom: 0;
   display: block;
   width: 100%;
   text-align: left;
