--- a/web/style/style.scss
+++ b/web/style/style.scss
@@ -180,10 +180,6 @@ main {
 
 @media all and (max-width: 960px) {
 
-  %button {
-    margin: 0 0 .3em;
-    }
-
   .newplugin {
     padding: 0;
 
